kubernetes/apps/observability/kube-prometheus-stack/manifests/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kube-prometheus-stack-prometheus
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-prometheus
  oidc:
    provider:
      issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
    clientID: b257908e-34ad-4933-98a0-ca00ff6fcfdd
    clientSecret:
      name: prometheus-secret
    redirectURL: https://prometheus.darkfellanetwork.com/oauth2/callback
    logoutPath: /logout
    cookieNames:
      accessToken: prometheus-access-token
      idToken: prometheus-id-token
  jwt:
    providers:
      - name: keycloak
        issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
        remoteJWKS:
          uri: https://accounts.darkfellanetwork.com/realms/DarkfellaNET/protocol/openid-connect/certs
        extractFrom:
          cookies:
            - prometheus-access-token
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        name: allow-by-group
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: roles
                values:
                  - observability
      - action: Allow
        name: allow-by-email
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: email
                values:
                  - georgi.panov@darkfellanetwork.com
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kube-prometheus-stack-alertmanager
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-alertmanager
  oidc:
    provider:
      issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
    clientID: 62e859f7-c3c2-463d-87de-4d05ecc27776
    clientSecret:
      name: alertmanager-secret
    redirectURL: https://alertmanager.darkfellanetwork.com/oauth2/callback
    logoutPath: /logout
    cookieNames:
      accessToken: alertmanager-access-token
      idToken: alertmanager-id-token
  jwt:
    providers:
      - name: keycloak
        issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
        remoteJWKS:
          uri: https://accounts.darkfellanetwork.com/realms/DarkfellaNET/protocol/openid-connect/certs
        extractFrom:
          cookies:
            - alertmanager-access-token
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        name: allow-by-group
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: roles
                values:
                  - observability
      - action: Allow
        name: allow-by-email
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: email
                values:
                  - georgi.panov@darkfellanetwork.com
